# orbiseo

./: .env.production.template  .gitignore  AWS_DEPLOYMENT.md  Dockerfile.crawl  Dockerfile.frontend  Dockerfile.main  README.md  app.yaml  deploy.sh  docker-compose.prod.yml  docker-deploy.sh  firestore.rules  fix-build.md  gcp-deploy.sh  next.config.ts  package-lock.json  package.json  package.json.production  pyproject.toml  render.yaml  tsconfig.tsbuildinfo
docs/: backend.json  blueprint.md
gcp/: cloudbuild.yaml  deploy-gcp.sh  quick-deploy.sh
nginx/: nginx.conf
python_backend/: Dockerfile.crawl  Dockerfile.main  ai-crawl.py  app.yaml  crawl-app.yaml  main.py  recaptcha_utils.py  render.yaml  requirements.txt
src/ai/: dev.ts  genkit.ts
src/ai/flows/: cluster-keywords-by-intent.ts  crawl-and-extract-entities.ts  generate-ai-content-suggestions.ts  generate-keyword-embeddings.ts  query-vector-database-semantically.ts  upsert-keywords-to-vector-database.ts
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/app/abtest/: page.tsx
src/app/ai-crawl/: page.tsx
src/components/: auth-dialog.tsx  dashboard-forms.tsx  icons.tsx  login-prompt-dialog.tsx
src/components/forms/: search-form-with-recaptcha.tsx
src/components/layout/: app-layout.tsx  footer.tsx
src/components/ui/: firebase-status.tsx  index.ts  recaptcha.tsx
src/firebase/: config.ts  index.ts  provider.tsx
src/hooks/: use-recaptcha.ts
src/lib/: api.ts  index.ts  placeholder-images.json  types.ts
systemd/: orbiseo-crawl.service  orbiseo-main.service
